# vam.whittaker

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  wheels.yml
_version/: __init__.py
src/: _whittaker.c
tests/: test_whittaker.py  testdata.py
vam/whittaker/: __init__.py  _version.py
