[metadata]
name = vam.whittaker
description = VAM whittaker core
version = attr: ._version.__version__
author = WFP-VAM
author_email =
maintainer = WFP-VAM
maintainer_email =
long_description_content_type = text/rst
long_description = file: README.rst
platforms = any
license = MIT License
url = http://github.com/WFP-VAM/vam.whittaker/
project_urls =
   Bug Reporting = http://github.com/WFP-VAM/vam.whittaker/issues

classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Development Status :: 3 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS

[options]
python_requires = >=3,<4

[aliases]
test=pytest

[tool:pytest]
python_files = tests/test_*.py
filterwarnings =
    ignore::UserWarning
